Video fix og spacing fix

--- a/style/vinderside.css
+++ b/style/vinderside.css
@@ -24,7 +24,7 @@ body {
   line-height: normal;
   text-decoration: none;
   position: absolute;
-  top: 45%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -69,7 +69,7 @@ body {
 .planets {
   position: absolute;
   transform: translate(-50%, -50%);
-  top: 125%;
+  top: 130%;
   left: 50%;
   overflow: hidden;
 }
@@ -78,7 +78,7 @@ body {
   z-index: 5;
   position: absolute;
   display: flex;
-  bottom: 17vh;
+  bottom: 12vh;
   left: 40%;
   gap: 20px;
 }
@@ -94,7 +94,7 @@ body {
   z-index: 5;
   position: absolute;
   display: flex;
-  bottom: 19vh;
+  bottom: 15vh;
   left: 50%;
   gap: 20px;
 }
@@ -108,10 +108,10 @@ body {
 }
 
 .headline {
-  margin-top: 6vh;
+  margin-top: 10vh;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 25px;
 }
 
 @keyframes raketlander {
@@ -123,4 +123,14 @@ body {
     transform: translateX(0);
     transform: rotate(8deg);
   }
+}
+
+#animationVideo {
+  width: 100%;
+  height: 75vh;
+  object-fit: cover;
+  position: fixed;
+  transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg); /* Safari and Chrome */
+  -moz-transform: rotateY(180deg); /* Firefox */
 }
